--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "generate": "nuxt generate",
+    "deploy": "nuxt generate && gh-pages -d .output/public",
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
